2004-12-14  Edd Dumbill <edd@usefulinc.com>
	* Updated INSTALL and manual page.

--- a/INSTALL
+++ b/INSTALL
@@ -1,17 +1,15 @@
 Daily Chump Bot Installation
 
-  $Id: INSTALL,v 1.7 2003/05/14 12:26:39 edmundd Exp $
+The Daily Chump Bot requires Python version 2.2 or greater and version 1.3 of
+the Twisted framework. Copy all the .py files in the src directory to a
+directory of your choosing and run it from that directory with the command:
 
-The Daily Chump Bot requires Python version 2.1 or greater. Copy all
-the .py files in the src directory to a directory of your choosing and
-run it from that directory with the command:
+  python dailychumptwist.py
 
-  python dailychumpbot.py
+Usage: src/dailychumptwist.py [ -h | --help ]
+       src/dailychumptwist.py [ -v | --version ]
+       src/dailychumptwist.py OPTIONS
 
-Usage: dailychumpbot.py [ -h | --help ]
-       dailychumpbot.py [ -v | --version ]
-       dailychumpbot.py OPTIONS
-          
  -s, --server=STRING      IRC server to connect to. Required.
  -p, --port=INTEGER       IRC port number (defaults to 6667). Optional.
  -n, --nick=STRING        Nickname for the bot. Required.
@@ -25,6 +23,5 @@ Usage: dailychumpbot.py [ -h | --help ]
                           with -i).
  -r, --address            Only respond to public messages that address bot
                           by name.
- -u, --utf-8              Read and write UTF-8 rather than Latin-1.
- -h, --help               Show usage information.
- -v, --version            Show version information.
+ -u, --utf-8              Expect UTF-8, rather than Latin-1, input
+
