--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-12-14  Edd Dumbill <edd@usefulinc.com>
+
+	* Updated INSTALL and manual page.
+
 2004-12-13  Edd Dumbill <edd@usefulinc.com>
 
 	* EntityEncoderU.py, EntityEncoder.py: remove dependency on
