--- a/heddley/README
+++ b/heddley/README
@@ -1,2 +1,2 @@
 
-Files specifically for the chump running at http://pants.heddley.com/
+Files specifically for the chump running at http://dailychump.org/
